# due-diligence-engine

./: .gitignore  LICENSE  README.ja.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  dde-self-test.yml  example-startup.yml  security-audit.yml
src/: __init__.py  cli.py  config.py  models.py
src/ai/: __init__.py  providers.py
src/analyze/: __init__.py  code.py  consistency.py  docs.py  engine.py  git_forensics.py  site_analyzer.py
src/ingest/: __init__.py  secure_loader.py
src/prompt/: __init__.py  generator.py  response_parser.py
src/purge/: __init__.py  secure_delete.py
src/report/: generator.py  pdf_generator.py  slides.py
src/saas/: __init__.py  app.py  auth.py  billing.py  dashboard.py  firebase_auth.py  firestore_client.py  github_oauth.py
src/score/: __init__.py  scorer.py  site_scorer.py
templates/: dashboard.html  evaluation.md  scorecard.html
tests/: __init__.py  test_consulting_pdf.py  test_scorer.py
