[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "due-diligence-engine"
version = "0.1.0"
description = "AI startup technical due diligence CLI & SaaS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DDE Team" }]

dependencies = [
    "anthropic>=0.45.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "stripe>=10.0.0",
    "python-multipart>=0.0.9",
    "cryptography>=43.0.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "reportlab>=4.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
dde = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
