[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "due-diligence-engine"
version = "0.2.0"
description = "AI-powered technical due diligence CLI — PDF-first, zero API keys required"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Takayuki Miyano / Atlas Associates" }]

dependencies = [
    "anthropic>=0.45.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "cryptography>=43.0.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "reportlab>=4.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
dde = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
